--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="keywods" content="html, ninja">
+
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="js/bootstrap.js">
   <link href="js/npm.js">
@@ -133,6 +135,8 @@
  <a href="#">Link</a>
 
 <!--Урок 5-->
+
+     <h1 class ="h16">gtr</h1>
 
  </body>
 
