--- a/index.html
+++ b/index.html
@@ -138,6 +138,28 @@
 
      <h1 class ="h16">gtr</h1>
 
+     <div class="wrapper">
+        <div class="left">
+            <h1>jkjlj</h1>
+            <p>ipoo</p>
+        </div>
+        <div class="write">
+            <h1>jkuyyij</h1>
+            <p>ipojmmno</p>
+        </div>
+     </div>
+
+
+     <div class="table">
+        <div class="left_table">
+            <h1>jkjlj</h1>
+            <p>ipoo</p>
+        </div>
+        <div class="right_table">
+            <h1>jkuyyij</h1>
+            <p>ipojmmno</p>
+        </div>
+     </div>
  </body>
 
 
