--- a/maket.html
+++ b/maket.html
@@ -17,7 +17,7 @@
     <div class="right-bar">Right</div>
     </div>
     <div class="footer">
-    Footer
+    Footer1
     </div>
     </div>
     </body>
